# gameOfLife

./: .gitignore  README.md  pyproject.toml
gameoflife/: Grid.py  Life.py  main.py
tests/: test_grid.py  test_life.py
